mpegtsmux: Handle zero-sized buffers correctly without going into an infinite loop

Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/issues/844